--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE 
-spring.datasource.url=jdbc:mysql://localhost:3306/coffeebreak
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+spring.datasource.username=${PROD_DB_USER}
+spring.datasource.password=${PROD_DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
